--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=Khatabackend
 # Database properties
 spring.datasource.url=jdbc:mysql://host.docker.internal:3306/project_db
 spring.datasource.username=root
-spring.datasource.password=Naveen@123
+spring.datasource.password=shanmukh@2006
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate properties
