--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,14 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.4.4</version>
+        <version>2.7.18</version>
         <relativePath/>
     </parent>
 
     <groupId>com.example.khatabackend</groupId>
     <artifactId>KhataBackend</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+         <packaging>war</packaging>
     <name>KhataBackend</name>
     <description>Simple user authentication backend</description>
 
